--- a/src/carousel/carousel.component.html
+++ b/src/carousel/carousel.component.html
@@ -5,7 +5,7 @@
     <div class="igx-carousel__inner" role="list">
         <ng-content></ng-content>
     </div>
-    <div template="ngIf navigation">
+    <div ng-template="ngIf navigation">
         <a role="button" tabindex="2" class="igx-carousel__arrow--prev" (click)="prev()" [hidden]="!slides.length">
             <span>
                 <i class="material-icons">arrow_back</i>
