(UPDATE) Replace the BEM utility to support error reporting (FIX) Restructure the SASS modules architecture to match BEM according to the new utility (FIX) Range, Tab bar, Badge, Dialog, Grid Filtering styling breaking since upgrade to Libsass 3.5

--- a/src/themes/material/modules/_button-group.scss
+++ b/src/themes/material/modules/_button-group.scss
@@ -1,17 +1,17 @@
 @include b(igx-button-group) {
     @extend %igx-bgroup-display;
-
+    
     @include e(item) {
         @extend %igx-bgroup-item;
+    }
 
-        @include e(content, true) {
-            @extend %igx-bgroup-item-content;
-        }
+    @include e(item, $m:selected) {
+        @extend %igx-bgroup-item;
+        @extend %igx-bgroup-item-selected;
+    }
 
-        @include m(selected) {
-            @extend %igx-bgroup-item;
-            @extend %igx-bgroup-item-selected;
-        }
+    @include e(item-content) {
+        @extend %igx-bgroup-item-content;
     }
 
     @include m(vertical) {
@@ -21,11 +21,11 @@
         @include e(item) {
             @extend %igx-bgroup-item;
             @extend %igx-bgroup-item-vertical;
-            
-            @include m(selected) {
-                @extend %igx-bgroup-item;
-                @extend %igx-bgroup-item-vertical-selected;
-            }
+        }
+
+        @include e(item, $m:selected) {
+            @extend %igx-bgroup-item;
+            @extend %igx-bgroup-item-vertical-selected;
         }
     }
 }
