--- a/src/themes/material/modules/_grid.scss
+++ b/src/themes/material/modules/_grid.scss
@@ -16,18 +16,18 @@
 
     @include e(tbody) {
         @extend %grid-tbody;
+    }
 
-        @include e(empty, true) {
-            @extend %grid-tbody--empty;
-        }
+    @include e(tbody-empty) {
+        @extend %grid-tbody--empty;
     }
 
     @include e(tr) {
         @extend %grid-row;
+    }
 
-        @include m(selected) {
-            @extend %grid-row--selected;
-        }
+    @include e(tr, $m:selected) {
+        @extend %grid-row--selected;
     }
 
     @include e(th) {
@@ -35,14 +35,6 @@
 
         @extend %grid-cell-display;
         @extend %grid-cell-header;
-
-        @include e(content, true) {
-            @extend %grid-cell-header-content;
-
-            & .icon {
-                @extend %grid-cell-header-cicon;
-            }
-        }
 
         &.asc,
         &.desc {
@@ -66,22 +58,29 @@
                 margin-right: 8px;
             }
         }
+    }
 
-        @include m(number) {
-            @extend %grid-cell-number;
+    @include e(th, $m:number) {
+        @extend %grid-cell-number;
+    }
+
+    @include e(th-content) {
+        @extend %grid-cell-header-content;
+
+        & .icon {
+            @extend %grid-cell-header-cicon;
         }
-
     }
 
     @include e(td) {
         @extend %grid-cell-display;
+    }
 
-        @include m(selected) {
-            @extend %grid-cell--selected;
-        }
+    @include e(td, $m:selected) {
+        @extend %grid-cell--selected;
+    }
 
-        @include m(number) {
-            @extend %grid-cell-number;
-        }
+    @include e(td, $m:number) {
+        @extend %grid-cell-number;
     }
 }
