--- a/src/themes/material/modules/_badges.scss
+++ b/src/themes/material/modules/_badges.scss
@@ -4,27 +4,28 @@
     @include e(circle) {
         @extend %igx-badge--default;
         @extend %igx-badge--circle;
-
-        @include e(value, true) {
-            @extend %igx-badge-value;
-        }
-
-        @include m(info) {
-            @extend %igx-badge--info;
-        }
-
-        @include m(success) {
-            @extend %igx-circle--success;
-        }
-
-        @include m(warning) {
-            @extend %igx-circle--warn;
-        }
-
-        @include m(error) {
-            @extend %igx-circle--error;
-        }
     }
+
+    @include e(circle-value) {
+        @extend %igx-badge-value;
+    }
+    
+    @include e(circle, $m:info) {
+        @extend %igx-badge--info;
+    }
+
+    @include e(circle, $m:success) {
+        @extend %igx-circle--success;
+    }
+
+    @include e(circle, $m:warning) {
+        @extend %igx-circle--warn;
+    }
+
+    @include e(circle, $m:error) {
+        @extend %igx-circle--error;
+    }
+    
     @include m(top-left) {
         @extend %igx-badge-display;
         @extend %igx-badge-pos-tl;
