--- a/src/themes/material/modules/_dialog.scss
+++ b/src/themes/material/modules/_dialog.scss
@@ -1,25 +1,20 @@
 @include b(igx-dialog) {
     @extend %igx-dialog-display;
-    
     @include e(window) {
         @extend %igx-dialog-window;
-
-        @include e(title, true) {
-            @extend %igx-dialog-title;
-        }
-        
-        @include e(content, true) {
-            @extend %igx-dialog-content;
-        }
-
-        @include e(actions, true) {
-            @extend %igx-dialog-actions;
-            button ~ button {
-                margin-left: 8px;
-            }
+    }
+    @include e(window-title) {
+        @extend %igx-dialog-title;
+    }
+    @include e(window-content) {
+        @extend %igx-dialog-content;
+    }
+    @include e(window-actions) {
+        @extend %igx-dialog-actions;
+        button~button {
+            margin-left: 8px;
         }
     }
-
     @include m(hidden) {
         @extend %igx-dialog--hidden;
     }
