--- a/src/themes/material/modules/_inputs.scss
+++ b/src/themes/material/modules/_inputs.scss
@@ -1,7 +1,8 @@
 
 // Global for all inputs
 input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0px 1000px white inset;
+    -webkit-box-shadow: 0 0 0 1000px white inset;
+	box-shadow: 0 0 0 1000px white inset;
 }
 
 @include b(igx-form-group) {
@@ -16,48 +17,15 @@ input:-webkit-autofill {
 	@include e(clear) {
 		@extend %igx-input-clear;
 
-		@include m(hidden) {
-			@extend %igx-input-clear;
-			@extend %igx-input-clear--hidden;
-		}
+	}
+
+	@include e(clear, $m:hidden) {
+		@extend %igx-input-clear;
+		@extend %igx-input-clear--hidden;
 	}
 
 	@include e(input) {
 		@extend %igx-form-input;
-
-		@include m(filled) {
-			@extend %igx-form-input;
-
-			~ label {
-				@extend %igx-form-label--filled;
-				@extend %igx-form-label--float;
-			}
-		}
-
-		@include m(focused) {
-			@extend %igx-form-input;
-
-			~ label {
-				@extend %igx-form-label--focused;
-			}
-		}
-
-		@include m(placeholder) {
-			@extend %igx-form-input;
-
-			~ label {
-				@extend %igx-form-label--float;	
-			}
-		}
-
-		@include m(search) {
-			@extend %igx-form-input;
-			@extend %igx-search-input;
-
-			~ label {
-				@extend %igx-search-label;
-			}
-		}
 
 		&:focus {
 			@extend %igx-form-input--focused;
@@ -88,6 +56,40 @@ input:-webkit-autofill {
 			~ label {
 				@extend %igx-form-label--warn;
 			}
+		}
+	}
+
+	@include e(input, $m:filled) {
+		@extend %igx-form-input;
+
+		~ label {
+			@extend %igx-form-label--filled;
+			@extend %igx-form-label--float;
+		}
+	}
+
+	@include e(input, $m:focused) {
+		@extend %igx-form-input;
+
+		~ label {
+			@extend %igx-form-label--focused;
+		}
+	}
+
+	@include e(input, $m:placeholder) {
+		@extend %igx-form-input;
+
+		~ label {
+			@extend %igx-form-label--float;	
+		}
+	}
+
+	@include e(input, $m:search) {
+		@extend %igx-form-input;
+		@extend %igx-search-input;
+
+		~ label {
+			@extend %igx-search-label;
 		}
 	}
 
