--- a/src/themes/material/modules/_list.scss
+++ b/src/themes/material/modules/_list.scss
@@ -25,11 +25,11 @@
         @include b(message) {
             @extend %igx-list-empty-message;
         }
+    }
 
-        @include m(custom) {
-            @extend %igx-list-empty;
-        }
-    } 
+    @include e(empty, $m:custom) {
+        @extend %igx-list-empty;
+    }
 
     // style the wrapping component elements
     @at-root {
