--- a/src/themes/material/modules/_tab.scss
+++ b/src/themes/material/modules/_tab.scss
@@ -1,53 +1,52 @@
 @include b(igx-tab-bar) {
     @include e(panel) {
         @extend %igx-tab-panel;
+    }
 
-        @include m(selected) {
-            @extend %igx-tab-panel;
-            @extend %igx-tab-panel--selected;
-        }
+    @include e(panel, $m:selected) {
+        @extend %igx-tab-panel;
+        @extend %igx-tab-panel--selected;
     }
 
     @include e(menu) {
         @extend %igx-tabbar-menu;
+    }
 
-        @include e(item, true) {
-            @extend %igx-tabbar-menu-item;
+    @include e(menu, $m:top) {
+        @extend %igx-tabbar-menu;
+        @extend %igx-tabbar-menu--top;
+    }
 
-            @include b(tab-icon) {
-                @extend %igx-tab-icon;
-            }
+    @include e(menu, $m:bottom) {
+        @extend %igx-tabbar-menu;
+        @extend %igx-tabbar-menu--bottom;
+    }
 
-            @include b(tab-label) {
-                @extend %igx-tab-label;
-            }
+    @include e(menu-item) {
+        @extend %igx-tabbar-menu-item;
 
-            @include m(selected) {
-
-                @include b(tab-icon) {
-                    @extend %igx-tab-icon--selected;
-                }
-
-                @include b(tab-label) {
-                    @extend %igx-tab-label--selected;
-                }
-            }
-
-            @include m(disabled) {
-                @extend %igx-tabbar-menu-item--disabled;
-            }
+        .tab-icon {
+            @extend %igx-tab-icon;
         }
 
-        @include m(top) {
-            @extend %igx-tabbar-menu;
-            @extend %igx-tabbar-menu--top;
-        }
-
-        @include m(bottom) {
-            @extend %igx-tabbar-menu;
-            @extend %igx-tabbar-menu--bottom;
+        .tab-label {
+            @extend %igx-tab-label;
         }
     }
-    
+
+    @include e(menu-item, $m:selected) {
+
+        .tab-icon {
+            @extend %igx-tab-icon--selected;
+        }
+
+        .tab-label {
+            @extend %igx-tab-label--selected;
+        }
+    }
+
+    @include e(menu-item, $m:disabled) {
+        @extend %igx-tabbar-menu-item--disabled;
+    }
 }
     
