(FIX) Cast block reference to string before using it in children scopes

--- a/src/themes/material/extends/_buttons.scss
+++ b/src/themes/material/extends/_buttons.scss
@@ -62,7 +62,7 @@
 }
 
 %igx-button--round {
-    $block: &;
+    $block: bem--selector-to-string(&);
     
     position: relative;
     display: flex;
