--- a/src/themes/material/modules/_controls.scss
+++ b/src/themes/material/modules/_controls.scss
@@ -1,7 +1,7 @@
 @include b(igx-control) {
     // Save the reference to this block element
     // in a variable for scoped access
-    $block: &;
+    $block: bem--selector-to-string(&);
     display: flex;
     align-items: center;
     justify-content: space-between;
