(UPDATE) Switch from grid-layout to flexbox for demos. (ADD) Column class to each sample group

--- a/demos/app/avatar/sample.component.html
+++ b/demos/app/avatar/sample.component.html
@@ -15,7 +15,7 @@
     <div class="sample-content">
 
         <!--Round Avatars-->
-        <section>
+        <section class="sample-column">
             <h4 class="sample-title">Circular Avatars</h4>
             <article class="avatars-wrapper">
                 <div class="avatar-sample">
@@ -58,7 +58,7 @@
         </section>
 
         <!--Square Avatars-->
-        <section>
+        <section class="sample-column">
             <h4 class="sample-title">Square Icons</h4>
             <article class="avatars-wrapper">
                 <div class="avatar-sample">
@@ -100,7 +100,7 @@
         </section>
 
         <!--Avatars w/ badges-->
-        <section>
+        <section class="sample-column">
             <h4 class="sample-title">In conjunction with the <i class="light">Badge Component</i></h4>
             <article class="avatars-wrapper">
 
