--- a/demos/app/button/sample.component.html
+++ b/demos/app/button/sample.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <section class="sample-content">
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Flat Buttons</h4>
             <div class="buttons-sample">
                 <button igxButton="flat" igxRipple>Flat</button>
@@ -28,7 +28,7 @@
             </div>
         </article>
 
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Raised Buttons</h4>
             <div class="buttons-sample">
                 <button igxButton="raised" igxRipple="white">Raised</button>
@@ -43,7 +43,7 @@
             </div>
         </article>
 
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Floating Action Buttons</h4>
             <div class="buttons-sample">
                 <button igxButton="fab" igxRipple="white">
@@ -76,7 +76,7 @@
             </div>
         </article>
 
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Icon Buttons</h4>
             <div class="buttons-sample">
                 <button igxButton="icon" igxRipple igxRippleCentered="true">
