--- a/demos/app/card/sample.component.html
+++ b/demos/app/card/sample.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="sample-content">
         <!--New York City Card Begins-->
-        <article class="card-wrapper">
+        <article class="sample-column card-wrapper">
             <igx-card>
                 <div style="overflow: hidden">
                     <img width="100%" height="100%" [src]="cards[0].imageUrl">
@@ -37,7 +37,7 @@
         <!--New York City Card End-->
 
         <!--Incepient Dawn Card Begins-->
-        <article class="card-wrapper">
+        <article class="sample-column card-wrapper">
             <igx-card>
                 <div style="overflow: hidden">
                     <img width="100%" height="100%" [src]="cards[2].imageUrl">
@@ -56,7 +56,7 @@
         <!--Incepient Dawn Card Ends-->
 
         <!--Monuments Card Begins-->
-        <article class="card-wrapper">
+        <article class="sample-column card-wrapper">
             <igx-card>
                 <div style="overflow: hidden">
                     <img width="100%" height="100%" [src]="cards[5].imageUrl">
@@ -76,7 +76,7 @@
         <!--Monuments Card Ends-->
 
         <!--Ice Forsest Card Begins-->
-        <article class="card-wrapper">
+        <article class="sample-column card-wrapper">
             <igx-card>
                 <div style="overflow: hidden">
                     <img width="100%" height="100%" [src]="cards[1].imageUrl">
@@ -94,7 +94,7 @@
 
 
         <!--Nico Rosberg Card Begins-->
-        <article class="card-wrapper">
+        <article class="sample-column card-wrapper">
             <igx-card>
                 <igx-card-header>
                     <h3 class="igx-card-header__title">{{ cards[3].title }}</h3>
@@ -109,7 +109,7 @@
 
 
         <!--Rupert Stadler Card Begins-->
-        <article class="card-wrapper">
+        <article class="sample-column card-wrapper">
             <igx-card>
                 <igx-card-header class="compact">
                     <igx-avatar [src]="cards[6].avatarUrl" roundShape="true"></igx-avatar>
@@ -136,7 +136,7 @@
         <!--Rupert Stadler Card Ends-->
 
         <!--Alicia Keys Card Begins-->
-        <article class="card-wrapper">
+        <article class="sample-column card-wrapper">
             <igx-card>
                 <img height="130px" class="igx-card__media--right" [src]="cards[4].imageUrl">
                 <div>
