--- a/demos/app/dialog/sample.component.html
+++ b/demos/app/dialog/sample.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <section class="sample-content">
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Alert</h4>
             <p class="sample-description">Detailed description to be added.</p>
             <div class="preview">
@@ -24,7 +24,7 @@
             </igx-dialog>
         </article>
 
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Generic Dialog</h4>
             <p class="sample-description">Detailed description to be added</p>
             <div class="preview">
@@ -36,7 +36,7 @@
             </igx-dialog>
         </article>
 
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Custom Dialog</h4>
             <p class="sample-description">Detailed description to be added</p>
             <div class="preview">
