--- a/demos/app/input/sample.component.html
+++ b/demos/app/input/sample.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <section class="sample-content">
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Input fieds w/ radio buttons</h4>
             <form class="input-sample" action="/" method="POST">
                 <h4 class="form-title">Personal Info</h4>
@@ -37,7 +37,7 @@
             </form>
         </article>
 
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Switch sample</h4>
             <div class="input-sample">
                 <h4 class="form-title">Settings</h4>
@@ -59,7 +59,7 @@
             </div>
         </article>
 
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Checkbox sample</h4>
             <div class="input-sample">
                 <h4 class="form-title">Delete Contacts</h4>
