--- a/demos/app/progressbar/sample.component.html
+++ b/demos/app/progressbar/sample.component.html
@@ -12,7 +12,7 @@
         </p>
     </div>
     <section class="sample-content">
-        <article class="linear-samples">
+        <article class="linear-samples sample-column">
             <h4 class="sample-title">Linear progress bar</h4>
             <div class="linear-container">
                 <igx-linear-bar [striped]="false" [value]="currentValue" [max]="200">
@@ -40,7 +40,7 @@
             </div>
         </article>
 
-        <article class="linear-samples">
+        <article class="linear-samples sample-column">
             <h4 class="sample-title">Striped linear progress bar</h4>
             <div class="linear-container">
                 <igx-linear-bar striped="true" [value]="currentValue">
@@ -68,7 +68,7 @@
             </div>
         </article>
 
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Circular progress indicator</h4>
             <div class="circular-samples">
                 <div class="circular-container">
