--- a/demos/app/tabbar/sample.component.html
+++ b/demos/app/tabbar/sample.component.html
@@ -15,7 +15,7 @@
 
     <div class="sample-content">
 
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Three item tabbar</h4>
             <div class="tabbar-wrapper" #tabbarEl>
                 <igx-tab-bar>
@@ -48,7 +48,7 @@
             </div>
         </article>
 
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Three item tabbar</h4>
             <div class="tabbar-wrapper" #tabbarEl>
                 <igx-tab-bar>
@@ -86,7 +86,7 @@
             </div>
         </article>
 
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Three item tabbar</h4>
             <div class="tabbar-wrapper" #tabbarEl>
                 <igx-tab-bar #tabbar (onTabSelected)="route($event)">
