--- a/demos/app/toast/sample.component.html
+++ b/demos/app/toast/sample.component.html
@@ -12,7 +12,7 @@
         </p>
     </div>
     <section class="sample-content">
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Bottom Position</h4>
             <div class="preview bottom"></div>
             <div class="btn-group">
@@ -20,7 +20,7 @@
                 <button igxButton="raised" igxRipple="white" (click)="toast.hide()" [disabled]="!toast.isVisible">Hide Toast</button>
             </div>
         </article>
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Middle Position</h4>
             <div class="preview middle"></div>
             <div class="btn-group">
@@ -28,7 +28,7 @@
                 <button igxButton="raised" igxRipple="white" (click)="toast.hide()" [disabled]="!toast.isVisible">Hide Toast</button>
             </div>
         </article>
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Top Position</h4>
             <div class="preview top"></div>
             <div class="btn-group">
