--- a/demos/app/card/sample.component.css
+++ b/demos/app/card/sample.component.css
@@ -1,8 +1,8 @@
 .sample-content {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    /*grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));*/
 }
 
 .card-wrapper {
-    max-width: 100%;
+    max-width: 460px;
     min-width: 320px;
 }
