--- a/demos/app/snackbar/sample.component.html
+++ b/demos/app/snackbar/sample.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <section class="sample-content">
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Snackbar w/ action button</h4>
             <div class="snackbar-sample">
                 <div class="color-holder" [style.backgroundColor]="color" (click)="changeColor(snackbar)">
